# matchbox

./: .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  build.rs  empty  matchbox-performance-boxstring-integration.md  matchbox-performance-global-ic.md  matchbox-performance-opcode-dispatch.md  matchbox-performance-primitive-opcodes.md  matchbox-roadmap.md  test  test.bxs  test.js  testJava.bxs  test_bundle.bxs  test_bundle.js  test_fn  test_fn.bxs  test_local.bxs
.github/workflows/: release.yml  snapshot.yml
crates/matchbox-compiler/: Cargo.toml
crates/matchbox-runner/: Cargo.toml
crates/matchbox-runner/src/: main.rs
crates/matchbox-vm/: Cargo.toml
docs/: developer_guide.md
docs/building-and-deploying/: native-builds.md  native-fusion.md
pkg/: matchbox.d.ts  matchbox.js  matchbox_bg.wasm  matchbox_bg.wasm.d.ts
src/: js_bundle_template.js  lib.rs  main.rs  modules.rs  stubs.rs
src/ast/: mod.rs
src/bifs/: mod.rs
src/compiler/: mod.rs
src/evaluator/: mod.rs
src/parser/: boxlang.pest  mod.rs
src/types/: mod.rs
src/vm/: chunk.rs  gc.rs  mod.rs  opcode.rs
stubs/: runner_stub_native
tests/: integration_tests.rs
tests/models/: ISpeakable.bxs  User.bxs
tests/native_fusion/: script.bxs
tests/scripts/: bifs.bxs  for_loop.bxs  functions.bxs  hello_world  multi_file.bxs  structs.bxs  vm_accessors.bxs  vm_basic.bxs  vm_classes.bxs  vm_complex_types.bxs  vm_defaults.bxs  vm_exceptions.bxs  vm_functions.bxs  vm_if.bxs  vm_inheritance.bxs  vm_interface_fail.bxs  vm_interfaces.bxs  vm_loop.bxs  vm_module_native_fusion.bxs  vm_modules.bxs  (+4 more)
(+39 files in other folders)
