[package]
name = "bx-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
pest = "2.8.6"
pest_derive = "2.8.6"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
wasm-encoder = "0.245.1"
wasmparser = "0.245.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimizations
panic = "abort"     # Remove stack unwinding code
strip = true        # Automatically strip symbols from the binary
