[package]
name = "matchbox_runner"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
matchbox_vm = { path = "../matchbox-vm" }
bincode = "1.3.3"
anyhow = "1.0.102"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
