[package]
name = "matchbox_runner"
version = "0.2.0"
edition = "2021"

[workspace]

[dependencies]
matchbox_vm = { path = "../matchbox-vm" }
bincode = "1.3.3"
anyhow = "1.0.102"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
